crates/scribe-core/tests/snapshots/fixtures__template-hocr-hello.snap
---
source: crates/scribe-core/tests/fixtures.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
  <head>
    <title></title>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
    <meta name="ocr-system" content="scribe" />
    <meta name="ocr-capabilities" content="ocr_page ocr_line ocrx_word" />
  </head>
  <body>
    <div class="ocr_page" id="page_1" title="bbox 0 0 284 96; image &quot;hello.png&quot;">
      <span class="ocr_line" id="line_1" title="bbox 26 28 257 63">
        <span class="ocrx_word" id="word_1_1" title="bbox 26 29 131 62">Hello</span>
        <span class="ocrx_word" id="word_1_2" title="bbox 146 28 257 63">World</span>
      </span>
    </div>
  </body>
</html>
