crates/scribe-core/tests/snapshots/fixtures__template-hocr-rotated.snap
---
source: crates/scribe-core/tests/fixtures.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
  <head>
    <title></title>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
    <meta name="ocr-system" content="scribe" />
    <meta name="ocr-capabilities" content="ocr_page ocr_line ocrx_word" />
  </head>
  <body>
    <div class="ocr_page" id="page_1" title="bbox 0 0 420 320; image &quot;rotated.png&quot;">
      <span class="ocr_line" id="line_1" title="bbox 38 66 181 125">
        <span class="ocrx_word" id="word_1_1" title="bbox 38 66 123 117">Tilted</span>
        <span class="ocrx_word" id="word_1_2" title="bbox 131 91 181 125">line</span>
      </span>
      <span class="ocr_line" id="line_2" title="bbox 368 150 392 176">
        <span class="ocrx_word" id="word_2_1" title="bbox 368 150 392 176">S</span>
      </span>
      <span class="ocr_line" id="line_3" title="bbox 368 174 393 194">
        <span class="ocrx_word" id="word_3_1" title="bbox 368 174 393 194">2</span>
      </span>
      <span class="ocr_line" id="line_4" title="bbox 362 195 387 286">
        <span class="ocrx_word" id="word_4_1" title="bbox 362 195 387 286">i</span>
      </span>
    </div>
  </body>
</html>
