crates/scribe-core/tests/snapshots/fixtures__template-html-figure-blank.snap
---
source: crates/scribe-core/tests/fixtures.rs
expression: output
---
<figure class="scribe-figure">
  <style>
    .scribe-overlay { position: relative; display: inline-block; line-height: 0 }
    .scribe-overlay img { display: block; max-width: 100% }
    .scribe-overlay svg { position: absolute; left: 0; top: 0; width: 100%; height: 100% }
    .scribe-overlay span { position: absolute; color: transparent; white-space: pre; line-height: 1; transform-origin: center }
    .scribe-overlay span::selection { color: #000; background: rgba(0, 90, 255, 0.35) }
    .scribe-sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0; border: 0; overflow: hidden; clip: rect(0 0 0 0); clip-path: inset(50%); white-space: normal }
  </style>
  <div class="scribe-overlay">
    <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAANwAAACMCAAAAAAyv5iqAAACj0lEQVR4Ae3AA6AkWZbG8f937o3IzKdyS2Oubdu2bdu2bdu2bWmMnpZKr54yMyLu+Xa3anqmhztr1a+a/5MACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYAgv+bAAj+bwIg+L8JgOD/JgCC/5sACP5vAiD4vwmA4P8mAIL/mwAI/m8CIPi/CYDg/yYA/hFo6QIaftzMegAAAABJRU5ErkJggg==" width="220" height="140" alt="" aria-describedby="scribe-transcript" />
  </div>
  <div class="scribe-sr-only" id="scribe-transcript">
  </div>
</figure>
